# MHKiT-Python

./: .gitattributes  .gitignore  .hscfg  .pre-commit-config.yaml  .pypirc  .travis.yml  LICENSE.md  LICENSE.txt  README.md  coverage.lcov  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_mhkit_deps.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/upload-coverage/: action.yml
.github/workflows/: .coveragehindcastrc  .coveragerc  black.yml  generate_notebook_matrix.py  main.yml  pylint.yml  pypi.yml  pytest-hindcast.ini  pytest.ini  test-notebooks.yml  test-wheel-build.yml
MATLAB/: findPOT.m  threshold.m
ci/: requirements-py36.yml  requirements-py37.yml
examples/: 46022Hm0Te.h5  62600-101.ipynb  ADCP_Delft3D_TRTS_2021_2023_all_transects.ipynb  ADCP_Delft3D_TRTS_example.ipynb  ADCP_transect_processing.ipynb  D3d_tanana.ipynb  Delft3D_example.ipynb  Delft3d_example.ipynb  MLER_example.ipynb  PacWave_resource_characterization_example.ipynb  SWAN_example.ipynb  TRTS_Delft3D_ADCP_example.ipynb  WDRT_short_term_extremes.ipynb  WPTO_hindcast_example.ipynb  acoustics_example.ipynb  adcp_discharge_example.ipynb  adcp_disharge_example.ipynb  adcp_example.ipynb  adcp_waves_example.ipynb  adv_example.ipynb  boxplot.py  cdip_example.ipynb  cdip_example.py  contours_46022_Hm0Te.csv  d3d.py  d3d_example.ipynb  d3d_irregular_grid.py  directional_waves.ipynb  dlfn_ADCP_example.ipynb  dlfn_ADV_example.ipynb  envSamp.py  environmental_contours.ipynb  environmental_contours_example.ipynb  environmental_coplas.ipynb  extreme_response_MLER_example.ipynb  extreme_response_contour_example.ipynb  extreme_response_full_sea_state_example.ipynb  extreme_response_full_seastate_example.ipynb  grid_convergence.ipynb  kelley.py  (+19 more)
examples/data/: data_loads_means.csv  data_loads_std.csv  power_data.csv  tanana_DV_curve.csv
examples/data/ADCP_transect/: tanana_transects_08_10_10_0_003_10-08-10_143335.PD0
examples/data/acoustics/: 6247_calibration.csv
examples/data/dolfyn/: AQD_HR.PRF  AWAC_test01.userdata.json  AWAC_test01.wpr  BenchFile01.ad2cp  H-AWAC_test01.wpr  RDI_7f79.000  RDI_7f79_2.000  RDI_test01.000  RDI_withBT.000  RiverPro_test01.PD0  Sig1000_dp_echo.ad2cp  Sig1000_online.ad2cp  Sig100_avg.ad2cp  Sig100_raw_avg.ad2cp  Sig500_Echo.ad2cp  Sig500_dp_ice.ad2cp  Sig500_last_ensemble_is_whole.ad2cp  Sig_SkippedPings01.ad2cp  VelEchoBT01.ad2cp  burst_mode01.VEC  sentinelv_b5.pd0  vector_data01.VEC  vector_data_imu01.VEC  vector_data_imu01.userdata.json  vmdas01_wh.ENX  vmdas01_wh.userdata.json  vmdas02_os.ENR  winriver01.PD0  winriver02.PD0  winriver02_transect.PD0
examples/data/loads/: data_loads_hs.csv  data_loads_maxs.csv  mler.csv  mler_ts.csv
examples/data/mooring/: line1_test.nc  line1_test.out
examples/data/power/: 2020224_181521_PowRaw.csv
examples/data/qc/: wave_elevation_data.csv
examples/data/river/: USGS_08313000_Jan2019_daily.json  USGS_08313000_Jan2019_instantaneous.json  tanana_VP_curve.csv  tanana_discharge_data.csv  tanana_test_results.csv  usgs_discharge_TRTS_20090801_20190801_daily.csv  usgs_discharge_TRTS_20100810_instantaneous.csv  usgs_gage_height_TRTS_20100810_instantaneous.csv
examples/data/tidal/: adcp.ENU.b1.20200815.nc  s08010.json
examples/data/wave/: 42a01c2003.txt  46002c2016.txt  46097.txt  46097h201908qc.txt  Hm0_Te_46022.pkl  Hm0_Te_contours_46022.csv  ValData1.json  ValData2_CDiP.json  ValData2_MC.json  WDRT_caluculated_countours.json  mcr_mhkit.mat  mcr_mhkit_power.mat  meta.csv  multi_year_hindcast.csv  multi_year_hindcast2.csv  multiloc_meta.csv  multiparm.csv  pacwave_cluster_32.csv  principal_component_analysis.json  principal_component_analysis.pkl  single_year_hindcast.csv  single_year_hindcast_multiloc.csv  single_year_hindcast_period.csv
examples/swan/: INPUT  plot_swan.py  runOutput.py
mhkit/: __init__.py  loads.py  loadsKit.py  random_func.py  utils.py  warnings.py
mhkit/acoustics/: __init__.py  analysis.py  base.py  graphics.py  io.py  main.py  sel.py  spl.py  spsdl.py
mhkit/dolfyn/: __init__.py  binned.py  time.py  tools.py  velocity.py
mhkit/dolfyn/adp/: __init__.py  api.py  clean.py  discharge.py  turbulence.py
mhkit/dolfyn/adv/: api.py  clean.py  motion.py  turbulence.py
mhkit/dolfyn/io/: __init__.py  _read_bin.py  api.py  base.py  nortek.py  nortek2.py  nortek2_defs.py  nortek2_lib.py  nortek2lib.py  nortek_defs.py  nortek_lib.py  rdi.py  rdi_defs.py  rdi_lib.py
mhkit/dolfyn/rotate/: __init__.py  api.py  awac.py  base.py  rdi.py  signature.py  vector.py
mhkit/dolfyn/tools/: __init__.py  fft.py  misc.py  psd.py
mhkit/loads/: __init__.py  extreme.py  general.py  graphics.py  mler.py
mhkit/loads/extreme/: __init__.py  extremes.py  mler.py  peaks.py  sample.py
mhkit/mooring/: __init__.py  general.py  graphics.py  io.py  main.py
mhkit/power/: __init__.py  characteristics.py  quality.py
mhkit/qc/: __init__.py  upcrossing.py
mhkit/river/: __init__.py  device.py  graphics.py  io.py  performance.py  resource.py
mhkit/river/io/: __init__.py  d3d.py  usgs.py
mhkit/strain/: __init__.py  main.py  strain.py
mhkit/tests/: conftest.py  test_dolfyn.py  test_loads.py  test_power.py  test_river.py  test_tidal.py  test_utils.py  test_wave.py
mhkit/tests/acoustics/: test_analysis.py  test_io.py  test_metrics.py  test_stats.py
mhkit/tests/data/: PUG1501_velocity.csv  ValData2_CDiP.json  data.txt  (+8 more)
mhkit/tidal/: __init__.py  d3d.py  device.py  graphics.py  io.py  performance.py  resource.py
mhkit/utils/: __init__.py  cache.py  cache_utils.py  data_utils.py  stat_utils.py  time_utils.py  type_handling.py  upcrossing.py
mhkit/wave/: PCA.py  __init__.py  _environmental_contours.py  contours.py  environmental_contours.py  graphics.py  io.py  performance.py  resource.py  speed_testing.py  ws_io.py
workspace/: _loadsKit.py  _utilities.py  playground.ipynb  playground2.py  test.ipynb  test_GE_baseline.py  test_mooring.py  test_peetzdata.py  test_peetzdata2.py  test_peetzdata3.py  test_yaw_sweep_moments.py
workspace/data_peetz/: get_tdms.py
(+195 files in other folders)
